...
    <string name="menu">Menu</string>

    <string-array name="marcas">
        <item>Audi</item>
        <item>BMW</item>
        <item>Chevrolet</item>
        <item>Citroen</item>
        <item>Fiat</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Jeep</item>
        <item>Mercedes-Benz</item>
...
