...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        tools:visibility="visible" />

        <Button
        android:id="@+id/btnCadastro"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/defaultRed"
        android:insetTop="0dp"
        android:insetBottom="0dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/btnConsulta"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:backgroundTint="@color/defaultRedSec"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/consulta_aut"
...
